Edited the task form tab

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -45,7 +45,7 @@
                 <span>Process Instances</span>
             </a>
             <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/forms}">
-                <span class="material-icons mr-3">sync_alt</span>
+                <span class="material-icons mr-3">note_add</span>
                 <span>Task Forms</span>
             </a>
             <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" href="#">
