--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -82,6 +82,9 @@
 
 </main>    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/htmx.org@2.0.4"></script>
+<script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
+<script src="https://unpkg.com/hyperscript.org@0.9.14/dist/_hyperscript.min.js"></script>
     
     <!-- Custom JS -->
     <script th:src="@{/js/app.js}"></script>
