Added task form and clean-up process listing and current task reached

--- a/src/main/resources/templates/task/add.html
+++ b/src/main/resources/templates/task/add.html
@@ -36,8 +36,8 @@
                 </h5>
                 <p class="text-slate-400 text-sm">Basic details about the task</p>
             </div>
-<!--          <div class="p-5" th:utext="${formHtml}">-->
-<!--            </div>-->
+          <div class="p-5" th:utext="${formHtml}">
+            </div>
         </div>
     </div>
 </div>
