--- a/src/main/resources/templates/task/add.html
+++ b/src/main/resources/templates/task/add.html
@@ -64,7 +64,7 @@
                     <span class="material-icons text-blue-400 text-3xl">info</span>
                 </div>
                 <div>
-                    <h2 class="text-xl font-semibold text-white">Task management</h2>
+                    <h2 th:text="${name}" class="text-xl font-semibold text-white">Task management</h2>
                     <p class="mt-1 text-slate-400">Basic details about the task</p>
                 </div>
             </div>
