--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -32,19 +32,25 @@
             <h1 class="text-2xl font-bold text-white mt-1">JustJava</h1>
         </div>
         <nav class="space-y-4">
-            <a class="flex items-center px-4 py-3 bg-blue-600 text-white rounded-lg" th:href="@{/dashboard}" >
+            <a class="flex items-center px-4 py-3 text-slate-300 text-white rounded-lg"
+               th:href="@{/dashboard}"
+               th:classappend="${currentPath == '/dashboard'} ? ' bg-blue-600'">
                 <span class="material-icons mr-3">dashboard</span>
                 <span>Dashboard</span>
             </a>
-            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/tasks}">
+
+            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/tasks}"
+               th:classappend="${currentPath == '/tasks'} ? ' bg-blue-600'" >
                 <span class="material-icons mr-3">task_alt</span>
                 <span>Tasks</span>
             </a>
-            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/processes}">
+            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg"  th:href="@{/processes}"
+               th:classappend="${currentPath == '/processes'} ? ' bg-blue-600'">
             <span class="material-icons mr-3">sync_alt</span>
                 <span>Process Instances</span>
             </a>
-            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/forms}">
+            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg"  th:href="@{/forms}"
+               th:classappend="${currentPath == '/forms'} ? ' bg-blue-600'">
                 <span class="material-icons mr-3">note_add</span>
                 <span>Task Forms</span>
             </a>
