--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -19,18 +19,30 @@
                 <p class="text-slate-300">Active Processes</p>
                 <div class="flex justify-between items-end">
                     <p th:text="${processInstancesCount}" class="text-3xl md:text-5xl font-bold text-white mt-2">12</p>
+                    <a th:href="@{/processes}" class="view-all-link">
+                        View All
+                        <span class="material-icons ml-1 text-sm">chevron_right</span>
+                    </a>
                 </div>
             </div>
             <div class="card p-4 md:p-6 rounded-xl">
                 <p class="text-slate-300">Active Tasks</p>
                 <div class="flex justify-between items-end">
                     <p th:text="${activeTasksCount}" class="text-3xl md:text-5xl font-bold text-white mt-2">8</p>
+                    <a th:href="@{/tasks}" class="view-all-link">
+                        View All
+                        <span class="material-icons ml-1 text-sm">chevron_right</span>
+                    </a>
                 </div>
             </div>
             <div class="card p-4 md:p-6 rounded-xl">
                 <p class="text-slate-300">Completed Tasks</p>
                 <div class="flex justify-between items-end">
                     <p th:text="${completedTasksCount}" class="text-3xl md:text-5xl font-bold text-white mt-2">145</p>
+                    <a th:href="@{/tasks}" class="view-all-link">
+                        View All
+                        <span class="material-icons ml-1 text-sm">chevron_right</span>
+                    </a>
                 </div>
             </div>
         </div>
