--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="flex items-center space-x-4 md:space-x-6">
-            <button class="text-slate-400">
+            <button id="mode-toggle" class="text-slate-400">
                 <span class="material-icons">nightlight_round</span>
             </button>
             <button class="text-slate-400 relative">
